# idplite

./: .env.example  .gitignore  README.md  docker-compose.yaml
.github/workflows/: ci.yml
api/: Dockerfile  alembic.ini  pytest.ini  requirements.txt
api/app/: config.py  database.py  main.py
api/app/middleware/: auth.py  rbac.py
api/app/models/: __init__.py  audit_log.py  cost_snapshot.py  environment.py  runbook.py  team.py  user.py
api/app/routers/: audit.py  auth.py  environments.py  health.py  teams.py  users.py
api/app/schemas/: auth.py  team.py  user.py
api/migrations/: env.py
api/migrations/versions/: 054a3bd6eeb6_initial_schema.py
api/tests/: conftest.py  test_auth.py  test_setup.py
cli/: pyproject.toml
cli/idplite/: cli.py  client.py  config.py
cli/idplite/commands/: auth.py
ui/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  vite-env.d.ts
ui/src/api/: client.ts
ui/src/components/: ProtectedRoute.tsx
ui/src/hooks/: useAuth.tsx
ui/src/pages/: AuthCallback.tsx
