[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idplite"
version = "0.1.0"
description = "IDP Lite CLI — self-service environment provisioning"
requires-python = ">=3.10"
dependencies = ["click>=8.1", "httpx>=0.27", "rich>=13.7", "pyyaml>=6.0"]

[project.scripts]
idplite = "idplite.cli:cli"